# procedural-hero

./: .gitignore  CMakeLists.txt  LICENSE.txt
src/: build.h.in  main.cpp
src/gui/: application.cpp  application.hpp  mainwindow.cpp  mainwindow.hpp  scene_3d_view.cpp  scene_3d_view.hpp
